--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "framer-motion": "^10.12.4",
+    "hidden-from-bots-react": "^1.0.0",
     "postcss-preset-env": "^8.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
