--- a/sweep.yaml
+++ b/sweep.yaml
@@ -7,6 +7,11 @@ branch: 'main'
 gha_enabled: True
 # This is the description of your project. It will be used by sweep when creating PRs. You can tell Sweep what's unique about your project, what frameworks you use, or anything else you want.
 # Here's an example: sweepai/sweep is a python project. The main api endpoints are in sweepai/api.py. Write code that adheres to PEP8.
-description: ''
+description: 'portfolio website for frontend developer Andrew J Hughes made with React.js, Vite, and TypeScript'
+blocked_dirs: ['node_modules', 'dist']
+docs: { 'source': 'https://ajhughes.dev' }
 
 # Default Values: https://github.com/sweepai/sweep/blob/main/sweep.yaml
+
+
+
